--- a/style.css
+++ b/style.css
@@ -8,3 +8,13 @@ nav a{
     margin: auto;
 }
 
+.zoom {
+    
+    transition: transform .3s; /* Animation */
+    
+    
+}
+
+.zoom:hover {
+    transform: scale(1.3); /* (150% zoom - Note: if the zoom is too large, it will go outside of the viewport) */
+}
